# irontbl

./: Cargo.toml  README.md  irontbl.rs
integrations/: README.md
integrations/yazi/: yazi.toml
integrations/yazi/irontbl.yazi/: README.md  main.lua
src/: main.rs
